--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       A <i>Hellow World!</i> example:
       <pre>
-<code class="typescript">import { wrap, map, filter } from '@connectv/core';
+<code class="javascript">import { wrap, map, filter } from '@connectv/core';
 import { fromEvent } from 'rxjs';
 
 let a = document.getElementById('a') as HTMLInputElement;
@@ -63,7 +63,7 @@ wrap(fromEvent(a, 'input'))           // --&gt; wrap the `Observable` in a `Pin`
 
       A more elaborate example:
       <pre>
-<code class="typescript">import { wrap, pipe, map, filter, sink } from '@connectv/core';
+<code class="javascript">import { wrap, pipe, map, filter, sink } from '@connectv/core';
 import { fromEvent, timer } from 'rxjs';
 import { delay, debounceTime } from 'rxjs/operators';
 
@@ -131,7 +131,7 @@ wrap(fromEvent(a, 'input'))                    // --&gt; wrap the `Observable` i
       some other nodes along the way:
 
       <pre>
-<code class="typescript">import { source, sink, pin } from '@connectv/core';
+<code class="javascript">import { source, sink, pin } from '@connectv/core';
 
 let a = source();
 let b = pin();
@@ -149,7 +149,7 @@ a.send('world!');</code>
       </div>
 
       <pre>
-<code class="typescript">import { source, sink, pin } from '@connectv/core';
+<code class="javascript">import { source, sink, pin } from '@connectv/core';
 
 let a = source();
 let b = pin();
@@ -179,7 +179,7 @@ a.send('world!');</code>
       to be connected to multiple pins:
 
       <pre>
-<code class="typescript">import { source, sink } from '@connectv/core';
+<code class="javascript">import { source, sink } from '@connectv/core';
 
 let a = source();
 let b = sink(value =&gt; console.log('B::' + value));
@@ -196,7 +196,7 @@ a.send('world!');</code>
       </div>
 
       <pre>
-<code class="typescript">import { source, sink } from '@connectv/core';
+<code class="javascript">import { source, sink } from '@connectv/core';
 
 let a = source();
 let b = source();
@@ -219,7 +219,7 @@ b.send('world!');</code>
       You can also use <span code>group()</span> to work with a multitude of <i>Pins</i> at once:
 
       <pre>
-<code class="typescript">import { source, pin, group } from '@connectv/core';
+<code class="javascript">import { source, pin, group } from '@connectv/core';
 
 let a = source();
 let b = source();
@@ -243,7 +243,7 @@ b.send('world!');</code>
       </ul>
 
       <pre>
-<code class="typescript">import { pin } from '@connectv/core';
+<code class="javascript">import { pin } from '@connectv/core';
 
 let a = pin();
 let b = pin();
@@ -267,7 +267,7 @@ console.log('A:: ' + a.locked + ' B:: ' + b.locked);
       You can also create sources from plain values or from <i>Observables</i>:
 
       <pre>
-<code class="typescript">import { wrap, value, pin, group } from '@connectv/core';
+<code class="javascript">import { wrap, value, pin, group } from '@connectv/core';
 import { interval } from 'rxjs';
 
 let a = value('hellow world!'); // --&gt; a emits 'hellow world!' once
@@ -289,7 +289,7 @@ group(a, b).to(pin()).subscribe(v =&gt; console.log(v));</code>
       You can use <span code>spread()</span> to turn incoming values into multiple emissions:
 
       <pre>
-<code class="typescript">import { spread, value } from '@connectv/core';
+<code class="javascript">import { spread, value } from '@connectv/core';
 
 value([1, 2, 3, 4, 5, 6])
 .to(spread())
@@ -307,7 +307,7 @@ value([1, 2, 3, 4, 5, 6])
       <span code>filter()</span>:
 
       <pre>
-<code class="typescript">import { spread, value, filter, map } from '@connectv/core';
+<code class="javascript">import { spread, value, filter, map } from '@connectv/core';
 
 value([1, 2, 3, 4, 5, 6])
 .to(spread())
@@ -326,7 +326,7 @@ value([1, 2, 3, 4, 5, 6])
       You can break your flow into multiple branches and join them back using <span code>control()</span>:
 
       <pre>
-<code class="typescript">import { spread, value, map, control } from '@connectv/core';
+<code class="javascript">import { spread, value, map, control } from '@connectv/core';
 
 value([1, 2, 3, 4, 5, 6])
 .to(spread())
@@ -348,7 +348,7 @@ value([1, 2, 3, 4, 5, 6])
       You can even create loops in your flow:
 
       <pre>
-<code class="typescript">import { source, map, filter } from '@connectv/core';
+<code class="javascript">import { source, map, filter } from '@connectv/core';
 
 let a = source();
 let m = map(x =&gt; x + 1); // --&gt; lets give this pin a name so we can loop back to it
@@ -372,7 +372,7 @@ a.send(0);</code>
       <b>RxJS</b>'s <span code>delay()</span> operator:
 
       <pre>
-<code class="typescript">import { source, map, filter, pipe } from '@connectv/core';
+<code class="javascript">import { source, map, filter, pipe } from '@connectv/core';
 import { delay } from 'rxjs';
 
 let a = source();
@@ -409,7 +409,7 @@ a.send(0);</code>
       class:
 
       <pre>
-<code class="typescript">import { Composition, source, filter } from '@connectv/core';
+<code class="javascript">import { Composition, source, filter } from '@connectv/core';
 
 class EvenOdd extends Composition {
   constructor() {
@@ -482,7 +482,7 @@ a.send(4);</code>
 
 
       <pre>
-<code class="typescript">import { source, expr } from '@connectv/core';
+<code class="javascript">import { source, expr } from '@connectv/core';
 
 let a = source();
 let b = source();
@@ -510,7 +510,7 @@ a.send(42); b.send(30);</code>
       (instead of just <span code>"result"</span> pin). You can create nodes easily using <span code>node()</span> function:
 
       <pre>
-<code class="typescript">import { source, node } from '@connectv/core';
+<code class="javascript">import { source, node } from '@connectv/core';
 
 let N = node({ inputs: ['a'], outputs: ['even', 'odd']}, // --&gt; set the signature
   (input, output) =&gt; {
@@ -534,13 +534,15 @@ a.send(5);</code>
         <a class="button" href="https://stackblitz.com/edit/connective-cheat-15" target="_blank">TRY IT!</a>
       </div>
 
+      <br><br>
+
       <!---------- QUICK-DIVE : GATE ---------->
       <h3 id="gate">Gate</h3>
 
       You can control when some emission passes through via another emission using <span code>gate()</span>
 
       <pre>
-<code class="typescript">import { source, gate, map, spread, pipe, group, control } from '@connectv/core';
+<code class="javascript">import { source, gate, map, spread, pipe, group, control } from '@connectv/core';
 import { delay } from 'rxjs/operators';
 
 let a = source();
@@ -550,7 +552,7 @@ a.to(map(v =&gt; v.split(' '))) // --&gt; get all the words
 .to(spread())                // --&gt; spread them
 .to(g.input);                // --&gt; this is shorthand for `g.in('value')`
 
-group(g.output, control())   // --&gt; the `control()` causes a signal to be sent before the first output of the gate   
+group(g.output, control())   // --&gt; the `control()` causes a signal to be sent before the first output of the gate
 .to(pipe(delay(1000)))       // --&gt; wait one second after each word comes out
 .to(g.control);              // --&gt; open the gate again (letting next word through)
 
@@ -560,6 +562,72 @@ a.send("Hellow darkness my old friend I've come to talk with you again");</code>
       </pre>
       <div class="buttons">
         <a class="button" href="https://stackblitz.com/edit/connective-cheat-16" target="_blank">TRY IT!</a>
+      </div>
+
+      In this example, <span code>g.control</span> is a <span code>control()</span> pin that will cause the
+      gate to let emissions through when it receives a value itself. This pin is not mentioned in the gate's
+      signature. Alongside gate, some other agent types (such as <span code>node()</span> and <span code>expr()</span>)
+      also have this controlling pin (always accessible via <span code>.control</span>) which allows controlling
+      the behavior of the agent.
+
+      <br><br>
+
+      <!---------- QUICK-DIVE : STATE ---------->
+      <h3 id="state">State</h3>
+      You can keep reactive state values within your flows using <span code>state()</span>. For example, the following code
+      introduces a composition that represents the state of a <i>html input</i>, which is built on top of
+      <span code>state()</span>,
+      and then uses that composition to bind two inputs together:
+
+      <pre>
+<code class="javascript">import { wrap, map, state, sink, Composition } from '@connectv/core';
+import { fromEvent } from 'rxjs';
+
+class InputState extends Composition {
+  constructor(readonly el: HTMLInputElement) {
+    super({
+      inputs: ['value'],
+      outputs: ['value']
+    });
+
+    //
+    // we need access to `this.el` in wire(), but if parent class calls it,
+    // we will not get that access. as a result we need to call them ourselves.
+    //
+    this.build();
+    this.wire();
+  }
+
+  init() {}       // --&gt; prevent parent class from calling build() and wire()
+
+  build() {
+    this.add('model', state());
+    this.add('sink', sink(val =&gt; this.el.value = val));
+  }
+
+  wire() {
+    this.in('value').to(this.agent('model').in('value'));
+    wrap(fromEvent(this.el, 'input'))
+      .to(map(() =&gt; this.el.value))
+      .to(this.agent('model').in('value'));
+    this.agent('model').out('value')
+      .to(this.pin('sink'))
+      .to(this.out('value'));
+  }
+}
+
+
+let a = new InputState(document.getElementById('a') as HTMLInputElement);
+let b = new InputState(document.getElementById('b') as HTMLInputElement);
+
+a.out('value').to(b.in('value')); // --&gt; literal two-way binding
+b.out('value').to(a.in('value'));
+
+a.bind(); // --&gt; .bind() on composition will call .bind() on all child nodes having that method
+b.bind();</code>
+      </pre>
+      <div class="buttons">
+        <a class="button" href="https://stackblitz.com/edit/connective-cheat-17" target="_blank">TRY IT!</a>
       </div>
 
     </div>
