--- a/index.html
+++ b/index.html
@@ -721,6 +721,20 @@ sub.unsubscribe();</code>
 
       As stated above, <b>CONNECTIVE</b> is just a thin layer on top of <b>RxJS</b>. This means that <b>CONNECTIVE</b>
       constructs <b>RxJS</b> observable sequences for you based on the description of the reactive flow you have provided.
+
+      <br><br>
+
+      More precisely, each <i>Pin</i> is basically a lazy <i>Observable</i>. When you connect it to other pins or connect pins
+      to it the <i>Observable</i> is still not realized, and when the <i>Observable</i> is accessed, for example through
+      <span code>.subscribe()</span> method or through <span code>.observable</span> property, the <i>Observable</i> will be
+      created and the <i>Pin</i> will be locked.
+
+      <br><br>
+
+      Generally <b>CONNECTIVE</b> masks the API of <b>RxJS</b> so for simpler use cases you do not need to work with
+      <b>RxJS</b> directly, that's why knowledge of <b>RxJS</b> is not mandatory to get started with <b>CONNECTIVE</b>.
+      However, none of the functionality of <b>RxJS</b> is masked just for masking it, so for more advanced usage
+      you would definitely need to be familiar with <b>RxJS</b>.
     </div>
 
     <div id="toc">
