--- a/index.html
+++ b/index.html
@@ -735,6 +735,30 @@ sub.unsubscribe();</code>
       <b>RxJS</b> directly, that's why knowledge of <b>RxJS</b> is not mandatory to get started with <b>CONNECTIVE</b>.
       However, none of the functionality of <b>RxJS</b> is masked just for masking it, so for more advanced usage
       you would definitely need to be familiar with <b>RxJS</b>.
+
+      <br><br>
+      <br><br>
+
+      <!---------- CONTACT ---------->
+      <h1 id="contact">Contact</h1>
+
+      <ul>
+        <li>
+          For bugs, issues and suggestions, the best way is to create issues or pull requests to
+            <a href="https://github.com/CONNECT-platform/connective" target="_blank">the repository</a>.
+        </li>
+        <li>
+          For questions, feedback, etc. join the conversation on
+          <a href="https://gitter.im/connectv" target="_blank">Gitter</a>.
+        </li>
+        <li>
+          You can also <a href="mailto:eugene@connect-platform.com">drop me an email</a> anytime.
+        </li>
+      </ul>
+
+      <br><br>
+
+      <img class="bottom-logo" src="docs/assets/logo-unframed.svg"/>
     </div>
 
     <div id="toc">
