--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ sub.unsubscribe();</code>
     </div>
 
     <div class="footer">
-      <a href="https://connective.dev/docs/">Docs</a> <hr>
+      <a href="docs">Docs</a> <hr>
       <a href="https://github.com/CONNECT-platform/connective" target="_blank">GitHub</a>
     </div>
 
