make asset links absolute

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 
-    <link href="docs/assets/styles.css" rel="stylesheet">
-    <script src="docs/assets/main.js"></script>
+    <link href="/docs/assets/styles.css" rel="stylesheet">
+    <script src="/docs/assets/main.js"></script>
   </head>
   <body>
     <div class="container">
 
       <!---------- LOGO ---------->
 
-      <img class="logo" src="logo.svg"/>
+      <img class="logo" src="/logo.svg"/>
 
       <b>CONNECTIVE</b> facilitates large-scale
       <a href="https://en.wikipedia.org/wiki/Reactive_programming" target="_blank">reactive programming</a>
@@ -758,14 +758,14 @@ sub.unsubscribe();</code>
 
       <br><br>
 
-      <img class="bottom-logo" src="docs/assets/logo-unframed.svg"/>
+      <img class="bottom-logo" src="/docs/assets/logo-unframed.svg"/>
     </div>
 
     <div id="toc">
     </div>
 
     <div class="footer">
-      <a href="docs/overview">Docs</a> <hr>
+      <a href="/docs/overview">Docs</a> <hr>
       <a href="https://github.com/CONNECT-platform/connective" target="_blank">GitHub</a>
     </div>
 
