--- a/index.html
+++ b/index.html
@@ -760,9 +760,28 @@ you would definitely need to be familiar with <b>RxJS</b>.
     <div id="toc">
     </div>
 
+    <div id="nav">
+  <div class="contents">
+    <a href="/">Home</a>
+    <hr>
+    <a href="/docs/overview">Overview</a>
+    <hr>
+    <a href="/docs/pin">Pin</a>
+  </div>
+</div>
+
+
     <div class="footer">
-  <a href="/docs/overview">Docs</a> <hr>
+  <a href="/docs/overview">Docs</a>
+  <hr>
   <a href="https://github.com/CONNECT-platform/connective" target="_blank">GitHub</a>
+
+  <a href="/" class="no-underline home"><img src="/docs/assets/logo-notype.svg"/></a>
+  <a id="navtoggle" class="nav no-underline">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </a>
 </div>
 
 
