fix a typo in main webpage

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Getting it via a CDN:
 <br><br>
 
 <h1 id="usage">How To Use</h1>
-<a href="https://connective.dev/docs/">Reading the docs</a>
+<a href="https://connective.dev/docs/">Read the docs</a>
 for properly utilizing <b>CONNECTIVE</b>. A
 <a href="https://www.learnrxjs.io/" target="_blank">basic knowledge of <b>RxJS</b></a>
 would also help, though it is not mandatory. For basic usage and/or for getting started, here is a quick-dive:
