fix all links in main page

--- a/404.html
+++ b/404.html
@@ -100,7 +100,7 @@
     <hr>
     <a href="/docs/gate">gate</a>
     <hr>
-    <a href="/docs/handleError">handleError</a>
+    <a href="/docs/handle-error">handleError</a>
     <hr>
     <a href="/docs/composition">Composition</a>
     <hr>
