add overview and prev/next nav

--- a/404.html
+++ b/404.html
@@ -38,7 +38,8 @@
   then head back home as we've got more tales of awesome
   for your weary ears.</p>
   <div class="buttons">
-    <a class="button" href="/">Head Back Home</a>
+    <a href="javascript:void()" onclick="window.history.back()">Go Back</a>
+    <a class="button" href="/">Home</a>
   </div>
   <br><br>
   <img src="/docs/assets/404.svg"/>
@@ -46,6 +47,9 @@
 
 
       <br><br>
+
+      
+
 
       
 
