--- a/404.html
+++ b/404.html
@@ -92,6 +92,8 @@
     <a href="/docs/pipe">pipe</a>
     <hr>
     <a href="/docs/fork-join">fork/join</a>
+    <hr>
+    <a href="/docs/reduce">reduce</a>
 
     <br><br>
 
@@ -123,9 +125,13 @@
     <br><br>
 
     <h3>Advanced</h3>
+    <a href="/docs/memory">Memory management</a>
+    <hr>
     <a href="/docs/emission">Emission and context</a>
     <hr>
-    <a href="/docs/memory">Memory management</a>
+    <a href="/docs/pin-map">PinMap</a>
+    <hr>
+    <a href="/docs/interfaces">Interfaces</a>
     <hr>
     <a href="/docs/under-the-hoold">Under the hood</a>
 
