--- a/index.html
+++ b/index.html
@@ -816,6 +816,8 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <a href="/docs/pipe">pipe</a>
     <hr>
     <a href="/docs/fork-join">fork/join</a>
+    <hr>
+    <a href="/docs/reduce">reduce</a>
 
     <br><br>
 
@@ -847,9 +849,13 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <br><br>
 
     <h3>Advanced</h3>
+    <a href="/docs/memory">Memory management</a>
+    <hr>
     <a href="/docs/emission">Emission and context</a>
     <hr>
-    <a href="/docs/memory">Memory management</a>
+    <a href="/docs/pin-map">PinMap</a>
+    <hr>
+    <a href="/docs/interfaces">Interfaces</a>
     <hr>
     <a href="/docs/under-the-hoold">Under the hood</a>
 
