--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <hr>
     <a href="/docs/spread">spread</a>
     <hr>
-    <a href="/docs/pipe">group</a>
+    <a href="/docs/group">group</a>
     <hr>
     <a href="/docs/sink">sink</a>
     <hr>
