--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
     <hr>
     <a href="/docs/spread">spread</a>
     <hr>
-    <a href="/docs/pipe">group</a>
+    <a href="/docs/group">group</a>
     <hr>
     <a href="/docs/sink">sink</a>
     <hr>
