--- a/404.html
+++ b/404.html
@@ -98,7 +98,7 @@
     <hr>
     <a href="/docs/pipe">pipe</a>
     <hr>
-    <a href="/docs/fork-join">fork/join</a>
+    <a href="/docs/fork">fork</a>
     <hr>
     <a href="/docs/reduce">reduce</a>
 
@@ -127,7 +127,7 @@
     <hr>
     <a href="/docs/proxy">proxy</a>
     <hr>
-    <a href="/docs/fork-join">fork/join</a>
+    <a href="/docs/join">join</a>
 
     <br><br>
 
