--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <hr>
     <a href="/docs/pipe">pipe</a>
     <hr>
-    <a href="/docs/fork-join">fork/join</a>
+    <a href="/docs/fork">fork</a>
     <hr>
     <a href="/docs/reduce">reduce</a>
 
@@ -851,7 +851,7 @@ You can read more in detail on how <b>CONNECTIVE</b> creates observable sequence
     <hr>
     <a href="/docs/proxy">proxy</a>
     <hr>
-    <a href="/docs/fork-join">fork/join</a>
+    <a href="/docs/join">join</a>
 
     <br><br>
 
