fix logo in dark mode

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
       
 
-<img class="logo" src="/logo.svg"/>
+<div class="logo-group">
+<img class="logo light" src="/logo.svg"/>
+<img class="logo dark" src="/docs/assets/logo-type-dark.svg"/>
+</div>
 
 <b>CONNECTIVE</b> facilitates large-scale
 <a href="https://en.wikipedia.org/wiki/Reactive_programming" target="_blank">reactive programming</a>
