make 404 page more dark-mode aware

--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
   <h1>Page Not Found</h1>
   <p>Looks like the page you are looking for have ceased to exist, doesn't exist yet, or
   never had and never will exist outside of the history of a day-dreaming browser.
-  Either way, rest a moment, enjoy the sun,
+  Either way, rest a moment, enjoy the <span class="light">sun</span><span class="dark">moon</span>,
   then head back home as we've got more tales of awesome
   for your weary ears.</p>
   <div class="buttons">
@@ -51,7 +51,11 @@
     <a class="button" href="/">Home</a>
   </div>
   <br><br>
-  <img src="/docs/assets/404.svg"/>
+
+  <div class="image-group">
+    <img class="light" src="/docs/assets/404.svg"/>
+    <img class="dark" src="/docs/assets/404-dark.svg"/>
+  </div>
 </div>
 
 
